--- a/src/SFA.DAS.ApprenticeAccounts.Api/Properties/launchSettings.json
+++ b/src/SFA.DAS.ApprenticeAccounts.Api/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "",
-      "applicationUrl": "https://localhost:5501;http://localhost:5500",
+      "applicationUrl": "https://localhost:5801;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
