--- a/src/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests.csproj
@@ -12,7 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NServiceBus.Testing" Version="7.0.0" />
+    <PackageReference Include="SFA.DAS.NServiceBus.Testing" Version="16.0.21" />
     <PackageReference Include="SpecFlow" Version="3.5.5" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.5.5" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.5.5" />
