--- a/src/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -8,7 +8,7 @@
     <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="AutoFixture.NUnit3" Version="4.17.0" />
     <PackageReference Include="AutoFixture.SeedExtensions" Version="4.17.0" />
-    <PackageReference Include="FluentAssertions.Web" Version="1.0.138" />
+    <PackageReference Include="FluentAssertions.Web" Version="1.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
@@ -18,7 +18,7 @@
     <PackageReference Include="SpecFlow" Version="3.5.5" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.5.5" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.5.5" />
-    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="FluentAssertions" Version="6.2.0" />
     <PackageReference Include="NUnit" Version="3.13.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
