--- a/pipeline-templates/job/code-build.yml
+++ b/pipeline-templates/job/code-build.yml
@@ -10,10 +10,14 @@ jobs:
       clean: all
   variables:
   - group: BUILD Management Resources
+  - group: Prod Management Resources
+  - group: ESFA - SonarCloud
   steps:
   - template: azure-pipelines-templates/build/step/gitversion.yml@das-platform-building-blocks
 
   - template: azure-pipelines-templates/build/step/app-build.yml@das-platform-building-blocks
+    parameters:
+      SonarCloudProjectKey: SkillsFundingAgency_das-apim-endpoints
 
   - template: azure-pipelines-templates/build/step/dependency-check.yml@das-platform-building-blocks
 
