--- a/src/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <SpecFlowObsoleteCodeBehindFiles Remove="Features\ChangeEmailAddress - Copy.feature.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="AutoFixture.NUnit3" Version="4.17.0" />
     <PackageReference Include="AutoFixture.SeedExtensions" Version="4.17.0" />
@@ -16,7 +20,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NServiceBus.Testing" Version="7.3.0" />
     <PackageReference Include="SFA.DAS.NServiceBus.Testing" Version="16.0.21" />
-    <PackageReference Include="SpecFlow" Version="3.9.40" />
+    <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.9.40" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.40" />
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
@@ -27,6 +31,19 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SFA.DAS.ApprenticeAccounts.Api\SFA.DAS.ApprenticeAccounts.Api.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Features\GetApprenticePreferences.feature.cs">
+      <DependentUpon>GetApprenticePreferences.feature</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <SpecFlowFeatureFiles Update="Features\GetApprenticePreferences.feature">
+      <Visible>$(UsingMicrosoftNETSdk)</Visible>
+      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
+    </SpecFlowFeatureFiles>
   </ItemGroup>
 
 </Project>
