--- a/pipeline-templates/job/code-build.yml
+++ b/pipeline-templates/job/code-build.yml
@@ -15,6 +15,7 @@ jobs:
 
   - template: azure-pipelines-templates/build/step/app-build.yml@das-platform-building-blocks
     parameters:
+      RunAcceptanceTests: true
       SonarCloudProjectKey: SkillsFundingAgency_das-apprentice-accounts-api
 
   - task: DotNetCoreCLI@2
