--- a/src/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests/SFA.DAS.ApprenticeAccounts.Api.AcceptanceTests.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="AutoFixture.SeedExtensions" Version="4.17.0" />
     <PackageReference Include="FluentAssertions.Web" Version="1.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.11" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NServiceBus.Testing" Version="7.3.0" />
@@ -21,6 +21,7 @@
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.22.0" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
   </ItemGroup>
 
