--- a/src/SFA.DAS.ApprenticeAccounts.Api.UnitTests/SFA.DAS.ApprenticeAccounts.Api.UnitTests.csproj
+++ b/src/SFA.DAS.ApprenticeAccounts.Api.UnitTests/SFA.DAS.ApprenticeAccounts.Api.UnitTests.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="3.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="Moq" Version="4.18.2" />
