--- a/src/SFA.DAS.ApprenticeAccounts/SFA.DAS.ApprenticeAccounts.csproj
+++ b/src/SFA.DAS.ApprenticeAccounts/SFA.DAS.ApprenticeAccounts.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="FluentValidation" Version="11.2.2" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2" />
     <PackageReference Include="MediatR" Version="10.0.1" />
