Initial commit for support and guidance extras
for apprentice app

--- a/src/SFA.DAS.ApprenticeAccounts.UnitTests/SFA.DAS.ApprenticeAccounts.UnitTests.csproj
+++ b/src/SFA.DAS.ApprenticeAccounts.UnitTests/SFA.DAS.ApprenticeAccounts.UnitTests.csproj
@@ -27,4 +27,10 @@
     <ProjectReference Include="..\SFA.DAS.ApprenticeAccounts.Api\SFA.DAS.ApprenticeAccounts.Api.csproj" />
     <ProjectReference Include="..\SFA.DAS.ApprenticeAccounts\SFA.DAS.ApprenticeAccounts.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="DTOs\ApprenticeArticle\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DTOs\ApprenticeArticle\" />
+  </ItemGroup>
 </Project>
