--- a/src/SFA.DAS.ApprenticeAccounts.Api.UnitTests/SFA.DAS.ApprenticeAccounts.Api.UnitTests.csproj
+++ b/src/SFA.DAS.ApprenticeAccounts.Api.UnitTests/SFA.DAS.ApprenticeAccounts.Api.UnitTests.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\SFA.DAS.ApprenticeAccounts.Api\SFA.DAS.ApprenticeAccounts.Api.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Controllers\ApprenticeSupportAndGuidance\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\ApprenticeSupportAndGuidance\" />
+  </ItemGroup>
 </Project>
