Added in VG groups

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,6 +64,7 @@ stages:
   variables:
   - group: DevTest Management Resources
   - group: AT DevTest Shared Resources
+  - group: AT das-apprentice-accounts-api
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
@@ -79,6 +80,7 @@ stages:
   variables:
   - group: DevTest Management Resources
   - group: TEST DevTest Shared Resources
+  - group: TEST das-apprentice-accounts-api
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
