Added DEMO VG for ASP migration

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -155,6 +155,7 @@ stages:
   variables:
   - group: DevTest Management Resources
   - group: DEMO DevTest Shared Resources
+  - group: DEMO das-apprentice-accounts-api
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
